--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 
 <body>
     <div id="shopping-list">
-        <h1>{{header || 'Welcome'}}</h1>
-        <div class="add-item-form">
+        <div class="header">
+            <h1>{{header || 'Welcome'}}</h1>
+            <button v-if="editing" @click="doEdit(false)" class="btn btn-cancel">Cancelar</button>
+            <button v-else @click="doEdit(true)"class="btn btn-primary">Adicionar Item</button> 
+        </div>
+        
+        <div v-if="editing" class="add-item-form">
             <input 
                 @keyup.enter="saveItem"
                 type="text" v-model="newItem" placeholder="Adicione um item">
@@ -24,6 +29,7 @@
                 Salvar Item    
             </button>
         </div>
+        <p v-if="items.length === 0">Você comprou todos os itens ;)</p>
         <ul>
             <li v-for="item in items" :key="item.id">{{item.label}}</li>
         </ul>
@@ -34,18 +40,23 @@
             data() {
                 return {
                     header: "Shopping List App",
+                    editing: false,
                     newItem: '',
                     newItemHighPriority: false,
                     items: [
-                        { id: 1, label: '10 bonés New Era Vasco da Gama' },
-                        { id: 2, label: '5 cachecóis União Brasil-Portugal' },
-                        { id: 3, label: '20 copos Outubro Rosa Vasco da Gama' }
+                        //{ id: 1, label: '10 bonés New Era Vasco da Gama' },
+                        //{ id: 2, label: '5 cachecóis União Brasil-Portugal' },
+                        //{ id: 3, label: '20 copos Outubro Rosa Vasco da Gama' }
                     ]
                 }
             },
             methods:{
                 saveItem(){
                     this.items.push({id: this.items.lengh + 1, label: this.newItem})
+                    this.newItem = ""
+                },
+                doEdit(editing){
+                    this.editing = editing
                     this.newItem = ""
                 }
             }
